--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,29 @@
-language: php
+sudo: false
 
-notifications:
-  email:
-    on_success: never
-    on_failure: change
-
-branches:
-  only:
-    - master
+language:
+    - php
+    - node_js
 
 php:
-  - 5.3
-  - 5.6
+    - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
 
 env:
-  - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=trunk WP_MULTISITE=0
+    - WP_VERSION=trunk WP_MULTISITE=1
 
-matrix:
-  include:
-    - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
+install:
+    - export DEV_LIB_PATH=dev-lib
+    - if [ ! -e "$DEV_LIB_PATH" ] && [ -L .travis.yml ]; then export DEV_LIB_PATH=$( dirname $( readlink .travis.yml ) ); fi
+    - if [ ! -e "$DEV_LIB_PATH" ]; then git clone https://github.com/xwp/wp-dev-lib.git $DEV_LIB_PATH; fi
+    - source $DEV_LIB_PATH/travis.install.sh
 
-before_script:
-  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+script:
+    - source $DEV_LIB_PATH/travis.script.sh
 
-script: phpunit
+after_script:
+    - source $DEV_LIB_PATH/travis.after_script.sh
