--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,12 +20,12 @@
 
 	<filter>
 		<whitelist processUncoveredFilesFromWhitelist="false">
-			<directory suffix=".php">../</directory>
+			<directory suffix=".php">./</directory>
 			<exclude>
-				<directory suffix=".php">../dev-lib</directory>
-				<directory suffix=".php">../node_modules</directory>
-				<directory suffix=".php">../tests</directory>
-				<directory suffix=".php">../vendor</directory>
+				<directory suffix=".php">./dev-lib</directory>
+				<directory suffix=".php">./node_modules</directory>
+				<directory suffix=".php">./tests</directory>
+				<directory suffix=".php">./vendor</directory>
 			</exclude>
 		</whitelist>
 	</filter>
