--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,1 +1,3 @@
-dev-lib/.coveralls.yml
+service_name: travis-ci
+coverage_clover: build/logs/clover.xml
+json_path: build/logs/coveralls-upload.json
